# photobackup-server-native

./: CMakeLists.txt  at_yeoman_photobackup_server_heicToJpeg_HeicToJpeg.h  build.sh  heifToJpeg.cpp  imageMagick.cpp  main.cpp
